--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2985,7 +2985,7 @@
     "**Model Monitoring & Tracking Results:**\n",
     "  - The model must be monitored and updated. We recommend retraining the model monthly or quarterly on the newest available data.\n",
     "  - A/B Testing: Initially, you should A/B test the intervention strategy. For a set period, only intervene on 50% of the high-risk bookings.\n",
-    "  - Measure Lift: Compare the final cancellation rate of the Intervention Group (the 50% high risk booking that you do intervene) versus the Control Group (50% where no intervention was done) to accurately measure the financial \"lift\" or ROI (Return on Investment) of your new strategy. \n"
+    "  - Measure Lift: Compare the final cancellation rate of the Intervention Group (the 50% high risk booking that you do intervene) versus the Control Group (50% where no intervention was done) to accurately measure the financial \"lift\" or ROI  of your new strategy. \n"
    ]
   },
   {
@@ -3058,7 +3058,7 @@
    "metadata": {},
    "source": [
     "## Limitations and Future Recommendations:\n",
-    "While the current Random Forest model performs with high precision, it is based on a \"snapshot\" of specific historical data. It is important to note that no model can predict everything that would lead to a reservation cancellation, however there are plenty of features not yet included. To further improve the model's accuracy and business use, we suggest retrieving and training the model on even more (and more recent) data. Adding the following features should be considered for future development:\n",
+    "While the current Random Forest model performs with high precision, it is based on a \"snapshot\" of specific historical data. It is important to note that no model can predict everything that would lead to a reservation cancellation, however there are plenty of features not yet included. To further improve the model's accuracy and business use, we suggest retrieving and training the model on even more (and more recent) data. Consider adding the following features for future development:\n",
     "\n",
     "**External Data Integration:** Currently, the model only sees specific internal data for the reservation. Adding external features could significantly improve the \"Medium Risk\" classification.\n",
     "- **Local Events & Holidays:** A feature indicating if the reservation occurs during any major local events (festivals, conferences, sports) or public holidays. Guests are often less likely to cancel during high-demand periods.\n",
