images/fixed layout

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 99,
    "id": "d2d63699-6636-48a1-970b-46d00eddbe06",
    "metadata": {},
    "outputs": [
@@ -1861,7 +1861,7 @@
     "    data=coefficient_df.head(top_n), \n",
     "    palette='vlag')\n",
     "plt.title(f'Top 10 Feature Importance Coefficients-Logistic Regression')\n",
-    "#plt.savefig('images/top_features_logreg.jpg')\n",
+    "##plt.savefig('images/top_features_logreg.jpg', bbox_inches='tight')\n",
     "plt.show();\n",
     "\n",
     "print(\"\\nTop 10 Most Important Features (Magnitude and Direction):\")\n",
@@ -2111,7 +2111,7 @@
     "    palette='viridis'\n",
     ")\n",
     "plt.title(f'Top 10 Feature Importance - Random Forest')\n",
-    "#plt.savefig('images/top_features_rforest.jpg')\n",
+    "plt.savefig('images/top_features_rforest.jpg', bbox_inches='tight')\n",
     "\n",
     "plt.show();\n",
     "\n",
